refactor: rewrite candidate generations for KlondikeBoard. (#36)